substrate/frame/support/test/tests/pallet_ui/error_does_not_derive_pallet_error.stderr
error[E0277]: the trait bound `MyError: PalletError` is not satisfied
  --> tests/pallet_ui/error_does_not_derive_pallet_error.rs:18:1
   |
18 | #[frame_support::pallet]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PalletError` is not implemented for `MyError`
   |
   = help: the following other types implement trait `PalletError`:
             bool
             i8
             i16
             i32
             i64
             i128
             u8
             u16
           and $N others
   = note: this error originates in the derive macro `frame_support::PalletError` (in Nightly builds, run with -Z macro-backtrace for more info)
